--- a/LLPApp.csproj
+++ b/LLPApp.csproj
@@ -1,10 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <UserSecretsId>aspnet-LLPApp-A830B0D0-ECD8-48F5-967D-81478A5D745A</UserSecretsId>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Models\DeviceLog%28rework%29.cs" />
+    <Compile Remove="Models\DeviceLog.cs" />
+  </ItemGroup>
 
 
   <ItemGroup>
@@ -13,6 +18,11 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <Folder Include="Images\DeviceModel\" />
   </ItemGroup>
 
 </Project>
