--- a/LLPApp.csproj
+++ b/LLPApp.csproj
@@ -7,14 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Data\Migrations\20190815224259_DeviceModelShenanigans.cs" />
+    <Compile Remove="Data\Migrations\20190815224259_DeviceModelShenanigans.Designer.cs" />
     <Compile Remove="Models\DeviceLog%28rework%29.cs" />
     <Compile Remove="Models\DeviceLog.cs" />
   </ItemGroup>
 
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="8.1.1" />
-    <PackageReference Include="libphonenumber-csharp" Version="8.10.14" />
+    <PackageReference Include="AutoMapper" Version="9.0.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="libphonenumber-csharp" Version="8.10.16" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
@@ -22,7 +25,7 @@
 
 
   <ItemGroup>
-    <Folder Include="Images\DeviceModel\" />
+    <Folder Include="wwwroot\img\devicemodel\" />
   </ItemGroup>
 
 </Project>
